kustomize-Jellyfin/Jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: Jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: jellyfin-cache
          mountPath: /cache
        - name: jellyfin-media
          mountPath: /media
      volumes:
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: jellyfin-cache
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: jellyfin-media
        persistentVolumeClaim:
          claimName: jellyfin-pvc
