kustomize-Jellyfin/Jellyfin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: Jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8096
