kustomize-Jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Jellyfin-ingress
  namespace: Jellyfin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
spec:
  ingressClassName: nginx
  rules:
  - host: Jellyfin.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-Jellyfin
            port:
              number: 80
